Добавил и настроил middleware для контроля доступа через jwt
