# backend/api/openapi.yaml
@@ -94,6 +94,10 @@ paths:
       responses:
         '201':
           description: Сообщение успешно добавленно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
         '400':
           description: Не валидные данные запроса
           content:
@@ -221,6 +225,14 @@ components:
         data:
           $ref: '#/components/schemas/MessageDataRequest'
 
+    MessageResponse:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          minLength: 4
     ErrorResponse:
       type: object
       properties:
